--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@ description: "Middlware Home"
 permalink: /
 ---
 
-{% assign app_servers = site.data.docs['app-servers'] %}
-{% for item in app_servers %}
-  
-	<a href="{{ item.url }}" class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700">
-  	  <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-l-lg" src="{{ item.icon }}" alt="">
- 	   <div class="flex flex-col justify-between p-4 leading-normal">
-        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{ item.title }}</h5>
-	   </div>
-	</a>
+<p class="label">App Servers</p>
 
-{% endfor %}
+{% assign app_servers = site.data.docs['app-servers'] %} 
+<div class="cards">
+{% for item in app_servers %}
+	<div class="card">
+	  <a href="{{ item.url }}" >
+	    <img src="{{ item.icon }}" class="flex-card-image"  alt="">
+			<p class="card-title">{{ item.title }}</p>
+		</a>
+	</div>
+{% endfor %} 
+</div>
