--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ permalink: /
 {% for item in app_servers %}
 	<div class="card">
 	  <a href="{{ item.url }}" >
-	    <img src="{{ item.icon }}" class="flex-card-image"  alt="">
-			<p class="card-title">{{ item.title }}</p>
+	    <img src="{{ item.icon }}"   alt="">
+			<span>{{ item.title }}</span>
 		</a>
 	</div>
 {% endfor %} 
