--- a/index.html
+++ b/index.html
@@ -8,9 +8,35 @@ permalink: /
 
 <p class="label">App Servers</p>
 
-{% assign app_servers = site.data.docs['app-servers'] %} 
+{% assign items = site.data.docs['app-servers'] %} 
 <div class="cards">
-{% for item in app_servers %}
+{% for item in items %}
+	<div class="card">
+	  <a href="{{ item.url }}" >
+	    <img src="{{ item.icon }}"   alt="">
+			<span>{{ item.title }}</span>
+		</a>
+	</div>
+{% endfor %} 
+</div>
+
+<p class="label">Linux</p>
+{% assign items = site.data.docs['linux'] %} 
+<div class="cards">
+{% for item in items %}
+	<div class="card">
+	  <a href="{{ item.url }}" >
+	    <img src="{{ item.icon }}"   alt="">
+			<span>{{ item.title }}</span>
+		</a>
+	</div>
+{% endfor %} 
+</div>
+
+<p class="label">Data Base</p>
+{% assign items = site.data.docs['data-base'] %} 
+<div class="cards">
+{% for item in items %}
 	<div class="card">
 	  <a href="{{ item.url }}" >
 	    <img src="{{ item.icon }}"   alt="">
